--- a/app/src/main/res/layout/master_list.xml
+++ b/app/src/main/res/layout/master_list.xml
@@ -5,23 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentTaskList">
+    tools:context=".FragmentMasterList">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/task_list_layout"
+            android:id="@+id/master_list_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/subtitle_task_text"
+                android:id="@+id/subtitle_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/archive_warning"
+                android:text="@string/urgent_warning"
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textColor="@color/sub_content"
@@ -32,8 +32,23 @@
                 app:layout_constraintBottom_toBottomOf="parent" />
 
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_task_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/background"
+        app:tint="@color/content"
+        app:shapeAppearanceOverlay="@style/fab_rounded"
+        android:contentDescription="@string/fab_add_context" />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
