--- a/app/src/main/res/layout/task_add_edit.xml
+++ b/app/src/main/res/layout/task_add_edit.xml
@@ -2,9 +2,10 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/task_add_edit_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TaskAddEdit">
+    tools:context=".FragmentTaskAddEdit">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/task_add_edit_layout"
@@ -164,9 +165,9 @@
 
         <EditText
             android:id="@+id/edit_start_date"
-            android:layout_width="120dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:autofillHints="Name of motive"
+            android:autofillHints="Task start date"
             android:inputType="date"
             android:textColor="@color/sub_content"
             android:labelFor="@id/label_motive_name"
@@ -192,7 +193,7 @@
 
         <EditText
             android:id="@+id/edit_end_date"
-            android:layout_width="120dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:autofillHints="Name of motive"
             android:inputType="date"
@@ -206,6 +207,77 @@
             tools:ignore="LabelFor" />
 
         <TextView
+            android:id="@+id/label_completed_check"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/completed_name"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/sub_content"
+            app:layout_constraintTop_toBottomOf="@+id/edit_end_date"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <CheckBox
+            android:id="@+id/completed_check"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textColor="@color/sub_content"
+            app:layout_constraintTop_toTopOf="@id/label_completed_check"
+            app:layout_constraintLeft_toRightOf="@id/label_completed_check"/>
+
+        <EditText
+            android:id="@+id/edit_completed_date"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:autofillHints="Completed Date"
+            android:inputType="date"
+            android:textColor="@color/sub_content"
+            android:labelFor="@id/label_completed_check"
+            android:hint="@string/date_hint"
+            android:focusable="false"
+            app:layout_constraintTop_toBottomOf="@+id/edit_end_date"
+            app:layout_constraintLeft_toRightOf="@id/completed_check"
+            tools:ignore="LabelFor" />
+
+        <TextView
+            android:id="@+id/label_checklist"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/checklist_name"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/sub_content"
+            app:layout_constraintTop_toBottomOf="@+id/label_completed_check"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <CheckBox
+            android:id="@+id/checklist_check"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textColor="@color/sub_content"
+            app:layout_constraintTop_toTopOf="@id/label_checklist"
+            app:layout_constraintLeft_toRightOf="@id/label_checklist"/>
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/subtask_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxHeight="240dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/label_checklist">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/subtask_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
+
+        <TextView
             android:id="@+id/label_repeat_check"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -214,7 +286,7 @@
             android:gravity="center_vertical"
             android:textSize="16sp"
             android:textColor="@color/sub_content"
-            app:layout_constraintTop_toBottomOf="@+id/edit_end_date"
+            app:layout_constraintTop_toBottomOf="@+id/subtask_scroll_view"
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <CheckBox
@@ -234,7 +306,6 @@
             android:text="@string/frequency_name"
             android:textSize="16sp"
             android:textColor="@color/sub_content"
-            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/label_repeat_check"
             app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -246,9 +317,84 @@
             android:inputType="textCapSentences"
             android:textColor="@color/sub_content"
             android:labelFor="@id/label_condition"
-            android:visibility="gone"
             app:layout_constraintTop_toTopOf="@id/label_frequency"
             app:layout_constraintLeft_toRightOf="@id/label_frequency" />
+
+        <TextView
+            android:id="@+id/label_repeat_clause"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/repeat_until"
+            android:gravity="center_vertical"
+            android:textSize="16sp"
+            android:textColor="@color/sub_content"
+            app:layout_constraintTop_toBottomOf="@+id/label_frequency"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <RadioButton
+            android:id="@+id/radio_repeat_forever"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/sub_content"
+            android:text="@string/forever_repeats"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/label_repeat_clause"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <RadioButton
+            android:id="@+id/radio_repeat_until"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/until_repeats"
+            android:textColor="@color/sub_content"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/radio_repeat_forever"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+        <EditText
+            android:id="@+id/edit_repeat_until"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="Repeat until clause"
+            android:inputType="date"
+            android:textColor="@color/sub_content"
+            android:labelFor="@id/radio_repeat_until"
+            android:hint="@string/date_hint"
+            android:focusable="false"
+            app:layout_constraintTop_toTopOf="@+id/radio_repeat_until"
+            app:layout_constraintLeft_toRightOf="@+id/radio_repeat_until" />
+
+        <RadioButton
+            android:id="@+id/radio_repeat_after"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/after_repeats"
+            android:textColor="@color/sub_content"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/radio_repeat_until"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+        <EditText
+            android:id="@+id/edit_repeat_after"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="Repeat until clause"
+            android:inputType="number"
+            android:textColor="@color/sub_content"
+            android:textAlignment="center"
+            android:labelFor="@id/radio_repeat_until"
+            android:hint="@string/x_times"
+            app:layout_constraintTop_toTopOf="@+id/radio_repeat_after"
+            app:layout_constraintLeft_toRightOf="@+id/radio_repeat_after" />
+        <TextView
+            android:id="@+id/label_repeat_after"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="12dp"
+            android:text="@string/repeats_number"
+            android:textColor="@color/sub_content"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="@+id/radio_repeat_after"
+            app:layout_constraintLeft_toRightOf="@+id/edit_repeat_after" />
 
         <TextView
             android:id="@+id/label_condition"
@@ -259,7 +405,7 @@
             android:text="@string/condition_name"
             android:textSize="16sp"
             android:textColor="@color/sub_content"
-            app:layout_constraintTop_toBottomOf="@+id/label_frequency"
+            app:layout_constraintTop_toBottomOf="@+id/radio_repeat_after"
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <Spinner
