--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,9 @@
         <item name="android:background">@drawable/shadow_button</item>
         <item name="android:textColor">@color/white</item>
     </style>
-    <style name="button_secondary">
-        <item name="android:background">@drawable/shadow_button_green</item>
-        <item name="android:textColor">@color/content</item>
+
+    <style name="dialog_button">
+        <item name="android:background">@drawable/custom_dialog_background</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
