--- a/app/src/main/res/layout/task_add_edit.xml
+++ b/app/src/main/res/layout/task_add_edit.xml
@@ -204,6 +204,7 @@
             android:inputType="time"
             android:textColor="@color/sub_content"
             android:labelFor="@id/label_motive_name"
+            android:text="@string/Default_Start"
             android:hint="@string/time_hint"
             android:focusable="false"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -248,6 +249,7 @@
             android:textColor="@color/sub_content"
             android:labelFor="@id/label_motive_name"
             android:hint="@string/time_hint"
+            android:text="@string/Default_End"
             android:focusable="false"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintTop_toBottomOf="@id/label_end_date"
@@ -621,19 +623,46 @@
             android:id="@+id/condition_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/repeat_layout"
             app:layout_constraintLeft_toLeftOf="parent">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/change_start_check_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent">
+                <TextView
+                    android:id="@+id/label_change_start_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:text="@string/connect_start_date_to_condition"
+                    android:gravity="center_vertical"
+                    android:textSize="16sp"
+                    android:textColor="@color/sub_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent" />
+
+                <CheckBox
+                    android:id="@+id/change_start_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:textColor="@color/sub_content"
+                    app:layout_constraintTop_toTopOf="@id/label_change_start_check"
+                    app:layout_constraintLeft_toRightOf="@id/label_change_start_check"
+                    tools:ignore="TouchTargetSizeCheck"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/label_condition"
                 android:layout_width="90dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="16dp"
                 android:gravity="center_vertical"
                 android:text="@string/condition_name"
                 android:textSize="16sp"
                 android:textColor="@color/sub_content"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/change_start_check_layout"
                 app:layout_constraintLeft_toLeftOf="parent" />
 
             <Spinner
